<resources>
    <string name="app_name">ViewsAndEvents</string>
    <string name="registration">Registration</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="age">Age: </string>
    <string name="next">Next</string>
    <string name="user_name_validaiton_error">Please enter your name.</string>
    <string name="email_validation_error">Please enter a valid email.</string>
    <string name="password_validation_error">Password must be at least 6 characters.</string>
    <string name="contact_number_validation_error">Please enter a valid contact number.</string>
    <string name="age_validation_success_message">All details are valid. Age:</string>
    <string name="login_icon">Login</string>
    <string name="admin_cpi_com">admin@cpi.com</string>
    <string name="admin_123">Admin@123</string>
    <string name="option3">9sdasd68456454</string>
    <string name="option4">Klsdhsa8zsasad455ads4a</string>
    <string name="authorize">Authorize</string>
    <string name="info_text">By using Grant Type Password you will not able to use User Management</string>
    <string name="bottom">Bottom</string>
    <string name="l2">L2</string>
    <string name="top">Top</string>
    <string name="center">Center</string>
    <string name="l1">L1</string>
    <string name="r1">R1</string>
    <string name="r2">R2</string>
    <string name="search">Search</string>
    <string name="view_in_grid">View in Grid</string>
    <string name="share_log">Share Log</string>
    <string name="share_log_via">Share log via</string>
    <string name="app_started">App Started</string>
    <string name="app_restarted">App Restarted</string>
    <string name="app_resumed">App Resumed</string>
    <string name="app_paused">App Paused</string>
    <string name="app_stopped">App Stopped</string>
    <string name="app_destroyed">App Destroyed</string>
    <string name="app_created">App Created</string>
    <string name="lifecycle_events">Lifecycle Events</string>
    <string name="book_list">Book List</string>
    <string name="add_book">Add Book</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book">Book</string>
    <string name="fiction">Fiction</string>
    <string name="non_fiction">Non Fiction</string>
    <string name="_5_12_years_old">5–12 years old</string>
    <string name="_13_19_years_old">13–19 years old</string>
    <string name="_20_39_years_old">20–39 years old</string>
    <string name="_40_59_years_old">40–59 years old</string>
    <string name="_60_years_old">60+ years old</string>
    <string name="fiction_non_fiction">Fiction/Non-Fiction</string>
    <string name="select_date">Select Date</string>
    <string name="age_group">Age Group</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="book_list_fragment">Book List Fragment</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="edit">Edit</string>
    <string name="book_type">Book Type</string>
    <string name="genre">Genre</string>
    <string name="launch_date">Launch Date</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_dob">Select DOB</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hobbies">Hobbies</string>
    <string name="reading">Reading</string>
    <string name="sports">Sports</string>
    <string name="education_details">Education Details</string>
    <string name="submit">Submit</string>
    <string name="_0_9_10_regex">^[0-9]{10}$</string>
    <string name="name_is_required">Name is required</string>
    <string name="enter_a_valid_10_digit_phone_number">Enter a valid 10-digit phone number</string>
    <string name="please_select_a_gender">Please select a gender</string>
    <string name="please_select_your_date_of_birth">Please select your date of birth</string>
    <string name="form_submitted_successfully">Form submitted successfully</string>
    <string name="email_is_required">Email is required</string>
    <string name="country_is_required">Country is required</string>
    <string name="address_is_required">Address is required</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="select_ssc_hsc">Select SSC/HSC</string>
    <string name="ssc_hsc_percentage">SSC/HSC Percentage:</string>
    <string name="_0">0%</string>
    <string name="select_bca_b_com">Select BCA/B.COM</string>
    <string name="bca_b_com_percentage">BCA/B.COM Percentage:</string>
    <string name="add_user_detail">Add User Detail</string>
    <string name="please_select_ssc_hsc">Please select SSC/HSC</string>
    <string name="please_select_bca_b_com">Please select BCA/B.COM</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="weather_description">Weather Description</string>
    <string name="temperature">Temperature</string>
    <string name="city">City</string>
    <string name="add_locations">Add Locations</string>
    <string name="marker">Marker</string>
    <string name="open_settings">Open Settings</string>
    <string name="image">Image</string>
    <string name="image_list">Image List</string>
    <string name="save">Save</string>
    <string-array name="color_options">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string-array name="folder_options">
        <item>/storage/emulated/0/Pictures</item>
        <item>/storage/emulated/0/DCIM</item>
    </string-array>
</resources>