<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen3Activity"
    android:paddingHorizontal="@dimen/_10dp">

    <LinearLayout
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:elevation="@dimen/_5dp"
        android:layout_marginTop="@dimen/_100dp"
        android:id="@+id/btnTop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/view"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_80dp"
        android:background="@color/white"
        android:elevation="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/center"
            android:textColor="@color/black"
            android:gravity="center_horizontal|center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:elevation="@dimen/_10dp"
        android:text="@string/bottom"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:background="@color/white"
        android:elevation="@dimen/_12dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/l1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:background="@color/white"
        android:elevation="@dimen/_12dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="@dimen/_33dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/r1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:background="@color/white"
        android:elevation="@dimen/_12dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnBottom"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:layout_width="@dimen/_33dp"
            android:layout_height="@dimen/_38dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/l2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_50dp"
        android:background="@color/white"
        android:elevation="@dimen/_12dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
        app:layout_constraintBottom_toTopOf="@+id/btnBottom"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="@dimen/_33dp"
            android:layout_height="@dimen/_38dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/r2" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>